# pomodoro-app

./: README.md  package-lock.json  package.json  readme.md  vite.config.js
backend/: .gitignore  nodemon.json  package-lock.json  package.json  readme.md  tsconfig.json
backend/db/: EFFortLog.sql  item.sql
backend/prisma/: schema.prisma
backend/src/: createMint.ts  mintEffortToken.ts  provenance_project.json  server.ts  solana.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/assets/: NewProject_1_tex.json  Ubbie_1_ske.json  Ubbie_1_tex.json  character_ske.json  character_tex.json
frontend/src/: App.jsx  main.jsx
frontend/src/assets/: NewProject_1_ske.json
frontend/src/constants/: index.jsx  mockData.jsx
frontend/src/hooks/: useDragonBones.jsx  usePomodoroData.jsx
frontend/src/lib/: api.jsx
frontend/src/pages/: DashboardPage.jsx  FocusPage.jsx  LoginPage.jsx  ProfilePage.jsx
frontend/src/store/: timerStore.jsx  userStore.jsx
programs/: .gitignore  docker-compose.yml  readme.md  setup_local.sh  solana-dev.Dockerfile
programs/backend/: dev-wallet.json
programs/docs/: error_solution.md
programs/provenance_project/: .token_info  Anchor.toml  package.json
programs/provenance_project/programs/provenance_project/: Cargo.toml
programs/provenance_project/programs/provenance_project/src/: lib.rs  shop.rs
programs/provenance_project/tests/: provenance_project.ts  (+1 more)
src/: App.jsx
src/constants/: mockData.jsx
src/lib/: utils.jsx
src/pages/: DashboardPage.jsx  LoginPage.jsx
(+27 files in other folders)
